Revert "trying to fix second IE issue, flickerig"
This reverts commit 67ee69474e5af57d227edefab2ae989dc2e117ad.

--- a/css/iceSlider.css
+++ b/css/iceSlider.css
@@ -2,14 +2,12 @@
 	overflow: hidden;
 	-ms-touch-action: pan-y pinch-zoom;
 	touch-action: pan-y pinch-zoom;
-	zoom: 1;
 }
 
 .hammer-set,
 .hammer-set > *,
 .hammer-set > * > * {
 	-webkit-backface-visibility: hidden;
-	backface-visibility: hidden;
 }
 
 .hammer-set img {
